# bank

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  README_ja.md  first_setup.sh  go.sh  install.bat  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.claude/hooks/: README.md  deny-check.sh  sessionstart-clear-load-junior-context.sh
.claude/rules/: communication-protocol.md  review-flow.md  role-boundaries.md
config/: permissions.yaml  target.yaml
instructions/: junior.md  junior1.md  junior2.md  junior3.md  manager.md  reviewer.md  senior.md
issues/: reviewer_codex_stall.md  reviewer_codex_stall_runbook.md
memory/: session_20260217.md  session_20260221.md  session_20260222.md  session_20260223.md  session_20260224.md  session_20260225_s15.md  session_20260225_s16.md  session_20260225_s17.md  session_20260225_s20.md  session_20260225_s21.md  session_20260225_s22.md  session_20260225_s23.md  session_20260225_s24.md  session_20260225_s25.md  session_20260225_s29.md  session_20260225_s30.md  session_20260227.md
queue/: manager_to_senior.yaml
queue/review/: junior_to_reviewer.yaml  (+5 more)
src/: __init__.py
templates/: abstract_template.md  context_template.md  experiment_log.md  figures_checklist.md  formatting_checklist.md  manuscript_section_list.md  paper_outline.md  project_structure.md  reference_master.csv  related_work_matrix.csv  response_to_reviewers.md  reviewer_finalize.sh  section_template.md  senior_clear_junior.sh  senior_reset_report.sh  senior_submit_plan.sh  submission_checklist.md  venue_submission_guidelines.md
(+195 files in other folders)
